--- a/sida/index.html
+++ b/sida/index.html
@@ -11,8 +11,17 @@
       <p>Þettar er verkefni í viðmótsforritun á Tölvubraut í Tækniskólanum</p>
     </div>
     <div class="section">
-      <h2>Verkefnilýsing</h2>
-      <p>jkrghedjk hgtrkhkrtj hkjrthkrtj hkltryjklh jtklrhj krtjhklrtjhklrtjhkjrt jrtklhjrtkg hjkl</p>
+      <h2>Verkefnalýsing</h2>
+      <p>Við ákváðum að fikta með LED matrixa þar sem það leit út fyrir að vera gaman
+        og skemmtilegt til að sýna. Við byrjuðum á að setja allt saman sem hafði verið pantað
+        og fikta með <a href="https://github.com/hzeller/rpi-rgb-led-matrix">library sem 
+        Henner Zeller gerði</a> fyrir svona led matrix og Raspberry pi. Það tók smá tíma til að finna
+        góðar stillingar sem virkuðu vel með þessum exact panelum þar sem þau geta verið mjög mismunandi
+        en okkur tókst það á endanum og virkaði nokkuð vel með rgb kassa demoinu (d0). Við byrjuðum að fikta
+        með að skrifa okkar eigin forrit sem notar libraryið en við höfðum mjöög lítin tíma í allt þetta 
+        verkefni svo við komumst ekki mjög langt með það en það eru nokkuð góð demo eftir Zeller sem hægt 
+        er að sýna t.d. texta sem fer yfir á allskonar vegu og svo auðvitað rgb kubburinn sem snýst í hringi.
+      </p>
     </div>
   </body>
 </html>
