--- a/sida/index.html
+++ b/sida/index.html
@@ -21,6 +21,7 @@
         með að skrifa okkar eigin forrit sem notar libraryið en við höfðum mjöög lítin tíma í allt þetta 
         verkefni svo við komumst ekki mjög langt með það en það eru nokkuð góð demo eftir Zeller sem hægt 
         er að sýna t.d. texta sem fer yfir á allskonar vegu og svo auðvitað rgb kubburinn sem snýst í hringi.
+        <img src="20181212_085017.jpg" />
       </p>
     </div>
   </body>
