--- a/sida/index.html
+++ b/sida/index.html
@@ -23,6 +23,11 @@
         er að sýna t.d. texta sem fer yfir á allskonar vegu og svo auðvitað rgb kubburinn sem snýst í hringi.
       </p>
       <img src="20181212_085017.jpg" />
+      <img src="20181212_085022.jpg" />
+      <video width="300" height="200" src="20181212_085058.mp4" controls></video>
+      <video width="300" height="200" src="20181212_085113.mp4" controls></video>
+      <video width="300" height="200" src="20181212_085120.mp4" controls></video>
+      <video width="300" height="200" src="20181212_085213.mp4" controls></video>
     </div>
   </body>
 </html>
